Fix the animation style on IE

--- a/assignment3/css/style.css
+++ b/assignment3/css/style.css
@@ -27,6 +27,14 @@
 		opacity: 1;
 	}
 }
+keyframes slideUp{
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
 
 body.container{
 	font-family: 'Josefin Sans', sans-serif;
